--- a/Profanity Checker/Profanity Checker Model.ipynb
+++ b/Profanity Checker/Profanity Checker Model.ipynb
@@ -25,20 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "916f4e34-53d2-4616-a36d-1c3bc4695d91",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "\n",
     "from datasets import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4c9f5687-8515-4abf-a83d-50c8e6af5baf",
    "metadata": {},
    "outputs": [],
@@ -48,19 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "b75ff0be-7d33-44b3-b3ce-07df359ac6da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the datasets (for testing purposes, we'll only take a sample for now).\n",
     "datasetStream = load_dataset(\"allenai/real-toxicity-prompts\", split=\"train\", streaming=True)\n",
-    "dataset = toxicDatasetStream.take(1000)"
+    "dataset = datasetStream.take(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "6fe2a7b6-7792-4844-b2fc-d1afe10bb89c",
    "metadata": {},
    "outputs": [],
@@ -100,11 +109,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "e75ee84f-5344-4d38-a483-b12b4dcb77f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3269479995.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 24\u001b[1;36m\u001b[0m\n\u001b[1;33m    if not character in characters:\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tensor Conversions\n",
+    "class Converter:\n",
+    "    def __init__(self, conversionString = \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789[]{}\\\"!?£$%^&*()_+-=~#@':;/,.<>\"):\n",
+    "        self.conversionString = conversionString\n",
+    "        self.tokenDimension = len(conversionString) + 1\n",
+    "\n",
+    "    def encode(self, inputString):\n",
+    "        output = []\n",
+    "\n",
+    "        for element in inputString:\n",
+    "            index = self.conversionString.index(element)\n",
+    "            if index == -1:\n",
+    "                index = self.tokenDimension - 1\n",
+    "\n",
+    "            output.append(index)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "# We only need to consider characters that are in the training dataset.\n",
+    "characters = \"\"\n",
+    "\n",
+    "for string in trainX:\n",
+    "    for character in string:\n",
+    "        if not character in characters:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "53eef15f-7971-426f-bf89-dd911afdfe13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ====================== Model Construction ======================"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02257a2f-5aa0-4b55-b067-63138a611ca7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building the model.\n"
+   ]
   }
  ],
  "metadata": {
