Added model structure and changed tokenizer to user proper torch tensors.

--- a/Profanity Checker/Profanity Checker Model.ipynb
+++ b/Profanity Checker/Profanity Checker Model.ipynb
@@ -39,6 +39,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "4c8bcd4b-b536-4c44-a2df-2da75f7947da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setting torch to use GPU acceleration if possible.\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "\n",
+    "torch.set_default_device(device)\n",
+    "print(f\"Using device: {torch.get_default_device()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "4c9f5687-8515-4abf-a83d-50c8e6af5baf",
    "metadata": {},
@@ -49,18 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b75ff0be-7d33-44b3-b3ce-07df359ac6da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loading the datasets (for testing purposes, we'll only take a sample for now).\n",
     "datasetStream = load_dataset(\"allenai/real-toxicity-prompts\", split=\"train\", streaming=True)\n",
@@ -69,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "6fe2a7b6-7792-4844-b2fc-d1afe10bb89c",
    "metadata": {},
    "outputs": [],
@@ -109,35 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "e75ee84f-5344-4d38-a483-b12b4dcb77f7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3269479995.py, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 24\u001b[1;36m\u001b[0m\n\u001b[1;33m    if not character in characters:\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tensor Conversions\n",
-    "class Converter:\n",
+    "class Tokenizer:\n",
     "    def __init__(self, conversionString = \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789[]{}\\\"!?£$%^&*()_+-=~#@':;/,.<>\"):\n",
     "        self.conversionString = conversionString\n",
     "        self.tokenDimension = len(conversionString) + 1\n",
     "\n",
     "    def encode(self, inputString):\n",
-    "        output = []\n",
+    "        output = torch.zeros(len(inputString), 1, self.tokenDimension)\n",
     "\n",
-    "        for element in inputString:\n",
+    "        for i, element in enumerate(inputString):\n",
     "            index = self.conversionString.index(element)\n",
     "            if index == -1:\n",
     "                index = self.tokenDimension - 1\n",
     "\n",
-    "            output.append(index)\n",
+    "            output[i][0][index] = 1.0\n",
     "\n",
     "        return output\n",
     "\n",
@@ -146,12 +154,13 @@
     "\n",
     "for string in trainX:\n",
     "    for character in string:\n",
-    "        if not character in characters:"
+    "        if not character in characters:\n",
+    "            characters += character"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "53eef15f-7971-426f-bf89-dd911afdfe13",
    "metadata": {},
    "outputs": [],
@@ -161,13 +170,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "02257a2f-5aa0-4b55-b067-63138a611ca7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Building the model.\n"
+    "# Building the model.\n",
+    "class ProfanityCheckerModel(nn.Module):\n",
+    "    def __init__(self, hiddenSize):\n",
+    "        super(ProfanityCheckerModel, self).__init__()\n",
+    "\n",
+    "        self.tokenizer = Tokenizer(characters)\n",
+    "\n",
+    "        self.rnn = nn.RNN(self.tokenizer.tokenDimension, hiddenSize)\n",
+    "        self.linear = nn.Linear(hiddenSize, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, inputString):\n",
+    "        inputTensor = self.tokenizer.encode(inputString)\n",
+    "        rnnOutput, hidden = self.rnn(inputTensor)\n",
+    "        output = self.linear(hidden[0])\n",
+    "        output = self.sigmoid(output)\n",
+    "\n",
+    "        return output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "44ca7863-307c-4446-8feb-5f5e59c1efa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5341]], grad_fn=<SigmoidBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rnn = ProfanityCheckerModel(128)\n",
+    "output = rnn(trainX[0])\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede3a1d1-4c6c-4bec-934f-9676ebec0630",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
