Implemented training algorithm and fixed programming errors.

--- a/Profanity Checker/Profanity Checker Model.ipynb
+++ b/Profanity Checker/Profanity Checker Model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "916f4e34-53d2-4616-a36d-1c3bc4695d91",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,10 @@
     "# Imports\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import time\n",
     "\n",
     "from datasets import load_dataset"
    ]
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "id": "e75ee84f-5344-4d38-a483-b12b4dcb77f7",
    "metadata": {},
    "outputs": [],
@@ -141,9 +145,10 @@
     "        output = torch.zeros(len(inputString), 1, self.tokenDimension)\n",
     "\n",
     "        for i, element in enumerate(inputString):\n",
-    "            index = self.conversionString.index(element)\n",
-    "            if index == -1:\n",
+    "            if not element in self.conversionString:\n",
     "                index = self.tokenDimension - 1\n",
+    "            else:\n",
+    "                index = self.conversionString.index(element)\n",
     "\n",
     "            output[i][0][index] = 1.0\n",
     "\n",
@@ -160,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 111,
    "id": "53eef15f-7971-426f-bf89-dd911afdfe13",
    "metadata": {},
    "outputs": [],
@@ -170,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 112,
    "id": "02257a2f-5aa0-4b55-b067-63138a611ca7",
    "metadata": {},
    "outputs": [],
@@ -182,22 +187,39 @@
     "\n",
     "        self.tokenizer = Tokenizer(characters)\n",
     "\n",
-    "        self.rnn = nn.RNN(self.tokenizer.tokenDimension, hiddenSize)\n",
+    "        self.rnn = nn.LSTM(self.tokenizer.tokenDimension, hiddenSize)\n",
     "        self.linear = nn.Linear(hiddenSize, 1)\n",
-    "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "    def forward(self, inputString):\n",
     "        inputTensor = self.tokenizer.encode(inputString)\n",
     "        rnnOutput, hidden = self.rnn(inputTensor)\n",
     "        output = self.linear(hidden[0])\n",
-    "        output = self.sigmoid(output)\n",
     "\n",
     "        return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 124,
+   "id": "7db818ca-82e1-4e0c-85ad-75d6a4afbe70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.0137]]], grad_fn=<ViewBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "agent = ProfanityCheckerModel(128)\n",
+    "print(agent(trainX[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "id": "44ca7863-307c-4446-8feb-5f5e59c1efa2",
    "metadata": {},
    "outputs": [
@@ -205,20 +227,187 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5341]], grad_fn=<SigmoidBackward0>)\n"
+      "Epoch #1: Average batch loss - 7.9185003657391\n",
+      "Epoch #2: Average batch loss - 7.307037283532063\n",
+      "Epoch #3: Average batch loss - 7.2490292861956585\n",
+      "Epoch #4: Average batch loss - 7.147655995506228\n",
+      "Epoch #5: Average batch loss - 7.163152229982714\n",
+      "Epoch #6: Average batch loss - 7.120989214128523\n",
+      "Epoch #7: Average batch loss - 7.089945143883124\n",
+      "Epoch #8: Average batch loss - 7.031460411748914\n",
+      "Epoch #9: Average batch loss - 7.057231283670417\n",
+      "Epoch #10: Average batch loss - 8.0224879938639\n",
+      "Epoch #11: Average batch loss - 7.016881542259256\n",
+      "Epoch #12: Average batch loss - 6.91587090209524\n",
+      "Epoch #13: Average batch loss - 6.855458381619053\n",
+      "Epoch #14: Average batch loss - 6.793542831243163\n",
+      "Epoch #15: Average batch loss - 6.8699754963029545\n",
+      "Epoch #16: Average batch loss - 6.8202362489014225\n",
+      "Epoch #17: Average batch loss - 7.791060417605802\n",
+      "Epoch #18: Average batch loss - 6.7015016803171275\n",
+      "Epoch #19: Average batch loss - 6.68036896332657\n",
+      "Epoch #20: Average batch loss - 6.564450537520518\n",
+      "Epoch #21: Average batch loss - 6.591428286619636\n",
+      "Epoch #22: Average batch loss - 6.433740287441474\n",
+      "Epoch #23: Average batch loss - 6.472709131464387\n",
+      "Epoch #24: Average batch loss - 6.311698974405673\n",
+      "Epoch #25: Average batch loss - 6.282812239293242\n",
+      "Epoch #26: Average batch loss - 6.191630865798733\n",
+      "Epoch #27: Average batch loss - 6.212255924552585\n",
+      "Epoch #28: Average batch loss - 6.1289256860500805\n",
+      "Epoch #29: Average batch loss - 6.236316957326935\n",
+      "Epoch #30: Average batch loss - 5.947778571396645\n",
+      "Epoch #31: Average batch loss - 5.91052582437528\n",
+      "Epoch #32: Average batch loss - 5.932134252248399\n",
+      "Epoch #33: Average batch loss - 6.011882658834283\n",
+      "Epoch #34: Average batch loss - 6.083617451086207\n",
+      "Epoch #35: Average batch loss - 6.119864438007969\n",
+      "Epoch #36: Average batch loss - 5.920632992443565\n",
+      "Epoch #37: Average batch loss - 5.759879597463346\n",
+      "Epoch #38: Average batch loss - 5.724437075746063\n",
+      "Epoch #39: Average batch loss - 7.465256040207563\n",
+      "Epoch #40: Average batch loss - 6.190049736873234\n",
+      "Epoch #41: Average batch loss - 5.81653283952149\n",
+      "Epoch #42: Average batch loss - 5.7430965568182035\n",
+      "Epoch #43: Average batch loss - 5.760898407834464\n",
+      "Epoch #44: Average batch loss - 5.711279325311889\n",
+      "Epoch #45: Average batch loss - 5.4861002470695635\n",
+      "Epoch #46: Average batch loss - 5.221317944694596\n",
+      "Epoch #47: Average batch loss - 5.0915848467366756\n",
+      "Epoch #48: Average batch loss - 5.040857109497923\n",
+      "Epoch #49: Average batch loss - 5.05274932678917\n",
+      "Epoch #50: Average batch loss - 6.151377557673984\n",
+      "Epoch #51: Average batch loss - 5.434185097463284\n",
+      "Epoch #52: Average batch loss - 5.005064342036584\n",
+      "Epoch #53: Average batch loss - 5.389372542186264\n",
+      "Epoch #54: Average batch loss - 5.626049691870807\n",
+      "Epoch #55: Average batch loss - 5.079990704556737\n",
+      "Epoch #56: Average batch loss - 4.793474975406191\n",
+      "Epoch #57: Average batch loss - 4.966697935445452\n",
+      "Epoch #58: Average batch loss - 4.542320326746541\n",
+      "Epoch #59: Average batch loss - 4.907500809750404\n",
+      "Epoch #60: Average batch loss - 4.7614145656733395\n",
+      "Epoch #61: Average batch loss - 4.414681913741001\n",
+      "Epoch #62: Average batch loss - 4.344396693485001\n",
+      "Epoch #63: Average batch loss - 4.47027865408451\n",
+      "Epoch #64: Average batch loss - 4.72923345881679\n",
+      "Epoch #65: Average batch loss - 4.501365612504043\n",
+      "Epoch #66: Average batch loss - 4.204355885817348\n",
+      "Epoch #67: Average batch loss - 4.224860961561621\n",
+      "Epoch #68: Average batch loss - 3.872834207675214\n",
+      "Epoch #69: Average batch loss - 3.8522314837826683\n",
+      "Epoch #70: Average batch loss - 3.6568660760410636\n",
+      "Epoch #71: Average batch loss - 3.930552299186665\n",
+      "Epoch #72: Average batch loss - 3.984652945038465\n",
+      "Epoch #73: Average batch loss - 3.5915449679812745\n",
+      "Epoch #74: Average batch loss - 3.603697607297937\n",
+      "Epoch #75: Average batch loss - 3.8174469191405147\n",
+      "Epoch #76: Average batch loss - 3.918013654551534\n",
+      "Epoch #77: Average batch loss - 3.6240991986786746\n",
+      "Epoch #78: Average batch loss - 7.409177549795615\n",
+      "Epoch #79: Average batch loss - 5.0699774881181225\n",
+      "Epoch #80: Average batch loss - 4.200325038421382\n",
+      "Epoch #81: Average batch loss - 3.869942313493181\n",
+      "Epoch #82: Average batch loss - 3.4835681511229897\n",
+      "Epoch #83: Average batch loss - 3.31643164841427\n",
+      "Epoch #84: Average batch loss - 3.454089222805072\n",
+      "Epoch #85: Average batch loss - 3.9248384311538294\n",
+      "Epoch #86: Average batch loss - 4.516054732452914\n",
+      "Epoch #87: Average batch loss - 3.5868440333082816\n",
+      "Epoch #88: Average batch loss - 3.4870909269733166\n",
+      "Epoch #89: Average batch loss - 3.366065179429146\n",
+      "Epoch #90: Average batch loss - 3.6570482419029533\n",
+      "Epoch #91: Average batch loss - 3.045361726901362\n",
+      "Epoch #92: Average batch loss - 2.970104826717671\n",
+      "Epoch #93: Average batch loss - 3.014294826457414\n",
+      "Epoch #94: Average batch loss - 2.914164388301049\n",
+      "Epoch #95: Average batch loss - 2.9858006226128007\n",
+      "Epoch #96: Average batch loss - 2.8523667572329026\n",
+      "Epoch #97: Average batch loss - 3.1585216164826497\n",
+      "Epoch #98: Average batch loss - 2.814149447463618\n",
+      "Epoch #99: Average batch loss - 2.5481805796429606\n",
+      "Epoch #100: Average batch loss - 2.2817914145167797\n"
      ]
     }
    ],
    "source": [
-    "rnn = ProfanityCheckerModel(128)\n",
-    "output = rnn(trainX[0])\n",
-    "print(output)"
+    "# Train an agent.\n",
+    "LEARNING_RATE = 1e-3\n",
+    "EPOCHS = 100\n",
+    "BATCH_SIZE = 64\n",
+    "REPORT_INTERVAL = 1\n",
+    "\n",
+    "agent = ProfanityCheckerModel(128)\n",
+    "\n",
+    "allLosses = []\n",
+    "agent.train()\n",
+    "\n",
+    "lossFN = nn.BCEWithLogitsLoss()\n",
+    "optimizer = torch.optim.Adam(agent.parameters(), lr = LEARNING_RATE)\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "for epoch in range(1, EPOCHS + 1):\n",
+    "    currentLoss = 0\n",
+    "    \n",
+    "    agent.zero_grad() # Reset Gradients.\n",
+    "\n",
+    "    # Create batches.\n",
+    "    batches = list(range(len(trainX)))\n",
+    "    random.shuffle(batches)\n",
+    "    batches = np.array_split(batches, len(batches) // BATCH_SIZE)\n",
+    "\n",
+    "    # Run through the batches.\n",
+    "    for i, batch in enumerate(batches):\n",
+    "        batchLoss = 0\n",
+    "\n",
+    "        for index in batch:\n",
+    "            text = trainX[index]\n",
+    "            label = trainY[index]\n",
+    "\n",
+    "            # The label is just a number, so convert it to a tensor.\n",
+    "            tensorLabel = torch.from_numpy(np.array([[[label]]]))\n",
+    "\n",
+    "            output = agent(text)\n",
+    "            loss = lossFN(output, tensorLabel)\n",
+    "            batchLoss += loss\n",
+    "\n",
+    "        # Batch complete. Optimise parameters.\n",
+    "        batchLoss.backward()\n",
+    "        nn.utils.clip_grad_norm_(agent.parameters(), 3)\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        currentLoss += batchLoss.item() / len(batch)\n",
+    "\n",
+    "    allLosses.append(currentLoss)\n",
+    "\n",
+    "    if epoch % REPORT_INTERVAL == 0:\n",
+    "        print(f\"Epoch #{epoch}: Average batch loss - {allLosses[-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "ede3a1d1-4c6c-4bec-934f-9676ebec0630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-2.3368]]], grad_fn=<ViewBackward0>) 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(agent(testX[0]), testY[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede3a1d1-4c6c-4bec-934f-9676ebec0630",
+   "id": "21806ae5-eb9c-4d80-9a81-4d7482b3f5e7",
    "metadata": {},
    "outputs": [],
    "source": []
