Added a script to obtain training data for the recommender.

--- a/Recipe Recommendation System/Recipe Recommender Model.ipynb
+++ b/Recipe Recommendation System/Recipe Recommender Model.ipynb
@@ -8,8 +8,8 @@
     "### Recipe Recommender Model\n",
     "A more complicated model that I'll be using for my Recipe Book application. Its job is to look at the different recipes that the user has created or favourited in the past, and using that, recommend them other recipes when they browse for recipes that other people have made.\n",
     "\n",
-    "Input: User-made recipes, including names and description.\n",
-    "Dataset: Other recipes that people have made.\n",
+    "Input: User-made recipes, including names, description, ingredients, and steps. Along with this, recipes that other people have made.\n",
+    "\n",
     "Output: A score given to each recipe for how relevant they seem to the user.\n",
     "\n",
     "Success Rate Goal: 90% accuracy/confidence."
